--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>$title</title>
+    $charset $description $keywords $pre $author $css
   </head>
   <body>
-    <canvas id="game"></canvas>
-    <script src="../src/index.ts"></script>
+    <canvas id="game"></canvas> $bundles
   </body>
 </html>
