--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>$title</title>
+    <style>
+      body {
+        background: #1b1f25;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        overflow: hidden;
+      }
+    </style>
     $charset $description $keywords $pre $author $css
   </head>
   <body>
